# Apex_Predators_OpenEnv

./: Dockerfile  LICENSE  README.md  generate_datasets.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_easy.csv  task_medium.csv  workspace.xml
data/: task_hard.csv
frontend/: .dockerignore  Dockerfile  sample_data.csv  test_ui.py
server/: api.py  app.py  environment.py  ui.py
tdata/: ask_hard.csv
